Fix z-index mobile menu

--- a/front/pi-grupo8/src/Styles/login.module.scss
+++ b/front/pi-grupo8/src/Styles/login.module.scss
@@ -12,7 +12,7 @@ body{
     justify-content: center;
     width: 30%;
     margin: 100px auto;
-    z-index: -1;
+    
     .loginTitle{
         color:var(--accent-color);
         text-align: center;
@@ -91,13 +91,14 @@ body{
     
 }
 
-@media (max-width: 425px){
+@media (max-width: 426px){
     .container{
         display: flex;
         flex-direction: column;
         justify-content: center;
         width: 70%;
         height: 90%;
+        z-index: -1;
         
     }
 }
